syntax = "proto2";

package Tests;

message Test1 {
  enum Test1Enum {
    ValueA=1;
    ValueB=2;
    ValueC=3;
  }

  message TestEmbed {
    optional int32 Int32Embed = 1;
    message TestEmbedInt {
      optional int32 Int32EmbedInt = 1;
    }
  }

  // Varint types
  optional int32 Int32 = 1;
  optional sint32 Sint32 = 2;
  optional uint32 Uint32 = 3;

  optional int64 Int64 = 4;
  optional sint64 Sint64 = 5;
  optional uint64 Uint64 = 6;

  optional bool Bool = 7;

  optional Test1Enum EnumWithDefault = 8 [default=ValueA];

  // Fixed types
  optional fixed32 Fixed32 = 9;
  optional fixed64 Fixed64 = 10;
  optional sfixed32 Sfixed32 = 11;
  optional sfixed64 Sfixed64 = 12;
  optional float Float = 13;
  optional double Double = 14;

  // Lengths types
  optional string String = 15;
  optional bytes Bytes = 16;
  optional TestEmbed Message_ = 17;
  repeated int32 Repeated = 18;
  optional Test1Enum Enum = 19;
}
